--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "svelte-app",
   "version": "1.0.0",
   "scripts": {
-    "build": "tsc && rollup -c",
-    "dev": "tsc && rollup -c -w",
+    "build": "rollup -c",
+    "dev": "rollup -c -w",
     "start": "sirv public"
   },
   "devDependencies": {
     "@pyoner/svelte-types": "^3.4.4-2",
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^7.0.0",
+    "@rollup/plugin-typescript": "^4.0.0",
     "rollup": "^1.20.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
