--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
     "svelte": "^3.0.0",
+    "svelte-preprocess": "^3.7.1",
     "tslib": "^1.11.1",
     "typescript": "^3.8.3"
   },
